--- a/EventingApp.Web/Components/Pages/Login.razor
+++ b/EventingApp.Web/Components/Pages/Login.razor
@@ -1,22 +1,20 @@
 @page "/login"
-@using System.ComponentModel.DataAnnotations
+@using EventingApp.Contracts.Requests
 
 <h3>Login</h3>
 
-<EditForm Model="@loginModel" OnValidSubmit="HandleValidSubmit">
+<EditForm>
     <DataAnnotationsValidator />
     <ValidationSummary />
 
     <div>
         <label for="email" class="col-sm-2 col-form-label">Email:</label><br />
-        <InputText id="email" @bind-Value="loginModel.Email" class="form-control" />
-        <ValidationMessage For="@(() => loginModel.Email)" />
+        <InputText id="email" class="form-control" />
     </div>
 
     <div>
         <label for="password" class="col-sm-2 col-form-label">Password:</label><br />
-        <InputText id="password" @bind-Value="loginModel.Password" type="password" class="form-control" />
-        <ValidationMessage For="@(() => loginModel.Password)" />
+        <InputText id="password" type="password" class="form-control" />
     </div>
 
     <br />
@@ -24,21 +22,4 @@
 </EditForm>
 
 @code {
-    private LoginModel loginModel = new();
-
-    private void HandleValidSubmit()
-    {
-        // Handle login logic here
-        Console.WriteLine($"Logging in as: {loginModel.Email}");
-    }
-
-    public class LoginModel
-    {
-        [Required(ErrorMessage = "Email is required")]
-        [EmailAddress(ErrorMessage = "Invalid email format")]
-        public string Email { get; set; }
-
-        [Required(ErrorMessage = "Password is required")]
-        public string Password { get; set; }
-    }
 }
